--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Orelega+One&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 
 <style>
@@ -25,8 +28,7 @@
        <h2>Introduction</h2>
        <p>Wavy, curly, and coily hair needs a bit more love to look great when compared to straight hair. The right product can make a world of difference, but there are so many different products that address different hair characteristics. How does product and brand usage differ for different hair types — and what products are best for YOUR hair?</p>
 
-       <button type="button" class="btn btn-primary btn-lg">Get Product Suggestions</button>
-       <!-- <button type="button" class="btn btn-primary btn-lg">View Analysis</button>  <button type="button" class="btn btn-primary btn-lg">About Data</button> -->
+       <button type="button" class="btn mybutton" href="products.html">Get Product Suggestions</button>
 
 
      <script>
