Updated README, fixed button on index page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        <h2>Introduction</h2>
        <p>Wavy, curly, and coily hair needs a bit more love to look great when compared to straight hair. The right product can make a world of difference, but there are so many different products that address different hair characteristics. How does product and brand usage differ for different hair types — and what products are best for YOUR hair?</p>
 
-       <button type="button" class="btn mybutton" href="products.html">Get Product Suggestions</button>
+       <button type="button" class="btn mybutton" onclick="location.href='https://morganoneka.github.io/haircare/products.html';">Get Product Suggestions</button>
 
 
      <script>
